--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ body{
     background-image:url("https://cdn.wccftech.com/wp-content/uploads/2017/06/eso_morrowind_forest.jpg");
     background-size:cover;
     background-attachment: fixed;
-    
 }
 
 .navBar{
@@ -16,13 +15,12 @@ body{
     line-height: 100px;
     font-size: 25px;
     color:white;
-    font-family: 'Exo', sans-serif;
-    
+    font-family: 'Exo', sans-serif; 
 }
 
 .fadeBox{
     width:75%;
-    height: 500px;
+    height: 700px;
     margin:30px auto 30px auto;
     padding:25px;
     background-color:rgba(0, 0, 0, 0.445);
@@ -30,4 +28,64 @@ body{
     color:white;
     font-family: 'Exo', sans-serif;
     font-size: 24px;
+}
+
+#timerBox{
+    background-color:rgba(0, 0, 0, 0.603);
+    width:30%;
+    height:50px;
+    margin:15px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
+}
+
+#Question{
+    background-color:rgba(0, 0, 0, 0.603);
+    width:100%;
+    height:75px;
+    margin:30px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
+}
+
+#aOne{
+    background-color:rgba(85, 148, 56, 0.479);
+    width:75%;
+    height:75px;
+    margin:15px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
+}
+
+#aTwo{
+    background-color:rgba(85, 148, 56, 0.479);
+    width:75%;
+    height:75px;
+    margin:15px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
+}
+
+#aThree{
+    background-color:rgba(85, 148, 56, 0.479);
+    width:75%;
+    height:75px;
+    margin:15px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
+}
+
+#aFour{
+    background-color:rgba(85, 148, 56, 0.479);
+    width:75%;
+    height:75px;
+    margin:15px auto 30px auto;
+    text-align: center;
+    vertical-align: center;
+    line-height: 75px;
 }
