--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ button{
     font-family: 'Exo', sans-serif;
 }
 
-#timerBox{
+#display{
     background-color:rgba(0, 0, 0, 0);
     width:30%;
     height:50px;
